// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core / Story host styles With Args 1`] = `
<storybook-wrapper>
  <storybook-button-component
    _ngcontent-a-c156=""
    _nghost-a-c52=""
    ng-reflect-text="Button with custom styles"
  >
    <button
      _ngcontent-a-c52=""
    >
      Button with custom styles
    </button>
  </storybook-button-component>
</storybook-wrapper>
`;

exports[`Storyshots Core / Story host styles With story template 1`] = `
<storybook-wrapper>
  <storybook-button-component
    _ngcontent-a-c155=""
    _nghost-a-c52=""
    ng-reflect-text="Button with custom styles"
  >
    <button
      _ngcontent-a-c52=""
    >
      Button with custom styles
    </button>
  </storybook-button-component>
</storybook-wrapper>
`;
